--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <a href="https://inbuildru.github.io/rules/">Правила</a>
                 <a href="https://inbuildru.github.io/donat/">Донаты</a>
                 <a href="https://inbuildru.github.io/info/">Информация</a>
-                <a href="https://inbuildru.github.io/channel/">Канал</a>
+                <a href="https://inbuildru.github.io/channel/">Каналы</a>
             </nav>
         </header>
         <br>
